k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mfo
  labels:
    app.kubernetes.io/name: max-facility-operations
    app.kubernetes.io/part-of: mfo
